main/default/objects/capm_Status_Report__c/capm_Status_Report__c.object-meta.xml
<CustomObject>
    <label>Status Report</label>
    <nameField>
        <displayFormat>SR-{0}</displayFormat>
        <label>Status Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>