main/default/objects/capm_Status_Report__c/fields/Areas_of_Improvements__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Improvements__c</fullName>
    <description>Status Report&apos;s Areas of Improvements</description>
    <label>Areas of Improvements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>