main/default/objects/capm_Status_Report__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Status Report&apos;s Date</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>