main/default/objects/capm_Status_Report__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <description>Status Report&apos;s Next Steps</description>
    <label>Next Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>