main/default/objects/capm_Status_Report__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes project related for this record.</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Status Reports</relationshipLabel>
    <relationshipName>Status_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>