main/default/objects/capm_Status_Report__c/fields/Recent_Success__c.field-meta.xml
<CustomField>
    <fullName>Recent_Success__c</fullName>
    <description>Status Report&apos;s Recent Success</description>
    <label>Recent Success</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>