main/default/objects/capm_Status_Report__c/fields/Risks__c.field-meta.xml
<CustomField>
    <fullName>Risks__c</fullName>
    <description>Status Report&apos;s Risks</description>
    <label>Risks</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>